# pulseaudio-lambda

./: .envrc  .gitignore  AGENT.md  CLAUDE.md  Makefile  README.md  flake.nix
android/: .envrc  Makefile  README.md  flake.nix  gradle.properties  local.properties  settings.gradle.kts  shell.nix
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: separation.pt
android/app/src/main/java/org/pulseaudiolambda/: MainActivity.kt  StemEngine.kt  StemService.kt
android/app/src/main/res/layout/: activity_main.xml
config/: stream_separator_config.json
lambdas/: cat.sh  dd-test.sh  debug-lambda.sh  drumless-adaptive.sh  drumless-center.sh  drumless.sh  echo.sh  env-test.sh  ffmpeg-volume.sh  identity.sh  lib.sh  pal-delay  passthrough-test.sh  sox-cat.sh  sox-debug.sh  sox-fixed.sh  sox-pacat-wrapper.sh  sox-realtime.sh  sox-wrapper.sh  speech.sh  stem-separator  volume.sh  whisper.sh
ml/: .envrc  buffer_hs_tasnet.py  chunk.py  export_torchscript.py  flake.nix  get_data.sh  main.py  passthrough_test.py  pyproject.toml  stream-stems.sh  stream_separator.py  stream_separator_args.py  stream_separator_optimized.py  test_stream.py  train.py
ml/app/: main.py
ml/blessed/: over30s.50.ckpt
ml/pal_stem_separator/: chunk.py  export_torchscript.py  stream_separator_args.py
ml/pal_stem_separator/ui/: gui.py  stream_separator_ui.py  tui.py
ml/shells/: default.nix
ml/src/ui/: stream_separator_ui.py
ml/stem_separator/: chunk.py  stream_separator_args.py
ml/stem_separator/ui/: stream_separator_ui.py
ml/ui/: README.md  config_model.py  gui.py  stream_separator_ui.py  tui.py
pal_stem_separator/: .gitignore  README.md  flake.nix  get_data.sh  pyproject.toml
pal_stem_separator/app/: main.py
pal_stem_separator/blessed/: over30s.5.ckpt
pal_stem_separator/pal_stem_separator/: AGENTS.md  export_executorch.py  export_torchscript.py  stats.py  stream_separator_args.py  stream_separator_utils.py
pal_stem_separator/pal_stem_separator/ui/: stream_separator_ui.py  tui.py  web.py
pal_stem_separator/shells/: default.nix  ml.nix
pal_stem_separator/tui/: AGENTS.md  flake.nix  go.mod  go.sum  main.go
shells/: default.nix  dev.nix  ml.nix
src/: module-lambda.c  pulseaudio-lambda.c
