tool.uv.package = true
[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pulseaudio-lambda-stem-separator"
version = "0.0.1"
authors = [
  { name="Harry Askham", email="harryaskham@gmail.com" },
]
description = "ML models for use as PulseAudio Lambdas"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.8.0",
    "torchaudio>=2.8.0a0",
    "triton>=2.8.0",
    "accelerate>=1.10.0",
    "numba>=0.57.0",
    "llvmlite>=0.40.0",
    "HS-TasNet>=0.2.29",
    "fire",
    "wandb",
    "termplotlib",
    "watchdog",
    "textual>=0.40.0", # For TUI interface
]

[[tool.uv.index]]
name = "pytorch-index"
url = "https://download.pytorch.org/whl/cpu"
#url = "https://download.pytorch.org/whl/rocm6.4"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-index" }]
torchaudio = [{ index = "pytorch-index" }]
torchvision = [{ index = "pytorch-index" }]
triton = [{ index = "pytorch-index" }]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
pal-stem-separator = "pal_stem_separator:main_cli"
