[project]
name = "pal-stem-separator"
version = "0.0.1"
authors = [
  { name="Harry Askham", email="harryaskham@gmail.com" },
]
description = "ML models for use as PulseAudio Lambdas"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "HS-TasNet>=0.2.29",
    "fire",
    "wandb",
    "termplotlib",
    "watchdog",
    "libtmux",
    "textual>=0.40.0", # For TUI interface
]

# CPU-only PyTorch would be ideal but uv2nix has issues with the +cpu suffix
# [[tool.uv.index]]
# name = "pytorch-cpu"
# url = "https://download.pytorch.org/whl/cpu"
# [tool.uv.sources]
# torch = { index = "pytorch-cpu" }
# torchaudio = { index = "pytorch-cpu" }

[project.scripts]
pal-stem-separator = "app.main:main"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "."
module-name = ["app", "pal_stem_separator"]
