[project]
name = "pal-stem-separator"
version = "0.0.1"
authors = [
  { name="Harry Askham", email="harryaskham@gmail.com" },
]
description = "ML models for use as PulseAudio Lambdas"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "HS-TasNet>=0.2.29",
    "fire",
    "wandb",
    "termplotlib",
    "watchdog",
    "libtmux",
    "textual>=0.40.0",
    "starlette>=0.37",
    "uvicorn>=0.23",
    "pywebview>=4.4",
    "pycairo>=1.28.0",
    "pygobject>=3.50",
    "qtpy>=2.4.3",

    "torch==2.8.0",
    "torchaudio==2.8.0",
    #"executorch>=0.7.0",
    #"pytorch-triton-rocm>=3.4.0",
]
 
#[[tool.uv.index]]
#name = "pytorch-index"
##url = "https://download.pytorch.org/whl/rocm6.4"
#url = "https://download.pytorch.org/whl/cpu"
#explicit = true
#
#[tool.uv.sources]
#torch = [
#  { index = "pytorch-index" },
#]
#torchaudio = [
#  { index = "pytorch-index" },
#]
#pytorch-triton-rocm = [
#  { index = "pytorch-index" },
#]

# [project.optional-dependencies]
# cpu = [
#   "torch>=2.8.0",
#   "torchaudio>=2.8.0",
#   "executorch>=0.7.0",
# ]
# rocm64 = [
#   "torch==2.8.0+rocm6.4",
#   "torchaudio==2.8.0+rocm6.4",
#   "executorch>=0.7.0",
#   "pytorch-triton-rocm>=3.4.0",
# ]
# 
# [tool.uv]
# conflicts = [
#   [
#     { extra = "cpu" },
#     { extra = "rocm64" },
#   ],
# ]
# 
# [tool.uv.sources]
# torch = [
#   { index = "pytorch-cpu", extra = "cpu" },
#   { index = "pytorch-rocm64", extra = "rocm64" },
# ]
# torchaudio = [
#   { index = "pytorch-cpu", extra = "cpu" },
#   { index = "pytorch-rocm64", extra = "rocm64" },
# ]
# pytorch-triton-rocm = [
#   { index = "pytorch-rocm64", extra = "rocm64" },
# ]
# 
# [[tool.uv.index]]
# name = "pytorch-cpu"
# url = "https://download.pytorch.org/whl/cpu"
# explicit = true
# 
# [[tool.uv.index]]
# name = "pytorch-rocm64"
# url = "https://download.pytorch.org/whl/rocm6.4"
# explicit = true

[project.scripts]
pal-stem-separator = "app.main:main"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "."
module-name = ["app", "pal_stem_separator"]
